--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -123,7 +123,7 @@
   }
   
   .about-feature-icon {
-    width: 100%;
+  
     scale: 1.4;
   }
 }
