--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -224,7 +224,10 @@
     padding: 1rem 0.5rem 0.7rem 0.5rem;
   }
   .project-title {
-    font-size: 1rem;
+    font-size: 0.95rem;
+    padding: 0.2rem 0.6rem;
+    text-align: center;
+    justify-content: center;
   }
   .project-desc {
     font-size: 0.98rem;
@@ -240,5 +243,19 @@
   .project-action-btn {
     font-size: 0.98rem;
     padding: 0.5rem 0;
+  }
+  .project-tags {
+    display: flex;
+    flex-wrap: wrap;
+     
+    gap: 0.5rem 0.7rem;
+    margin-bottom: 1.2rem;
+    justify-content: center;
+  }
+  .project-tag {
+
+    padding: 0.2rem 0.2rem;
+    font-size: 0.7rem;
+    border: solid 1px #a78bfa;
   }
 }
